fix (css): align text

--- a/mystyle.css
+++ b/mystyle.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   margin: 20% auto;
   padding: 40px;
   border: 2px solid #008080;
